# f2clipboard

./: .coveragerc  .env.example  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  action.yml  f2clipboard.py  llms.txt  pyproject.toml  setup.cfg
.github/workflows/: 01-lint-format.yml  02-tests.yml  03-docs.yml  ci.yml  coverage.yml  lint-test.yml
docs/: github-action.md  merge-conflict-roadmap.md  polish-cli-plugin-security-plan.md  polish-plan.md  prompts-codex-ci-fix.md  prompts-codex.md
docs/prompts/codex/: ci-fix.md  docs.md  implement.md  overview.md  polish.md  prompts-codex-docs.md  prompts-codex.md
f2clipboard/: __init__.py  chat2prompt.py  cli.py  codex_task.py  config.py  files.py  llm.py  merge_checks.py  merge_resolve.py  redaction.py  secret.py
f2clipboard/plugins/: __init__.py  jira.py
scripts/: checks.sh  migrate-prompt-docs.sh
tests/: conftest.py  test_action.py  test_basic.py  test_chat2prompt.py  test_cli_integration.py  test_codex_task.py  test_expand_pattern.py  test_f2clipboard.py  test_f2clipboard_extra.py  test_files_all.py  test_files_command.py  test_files_dry_run.py  test_files_exclude.py  test_files_include.py  test_files_max_size.py  test_files_no_clipboard.py  test_files_output.py  test_is_binary_or_image_file.py  test_jira_plugin.py  test_merge_checks.py  test_merge_resolve.py  test_openai_model_override.py  test_parse_gitignore.py  test_plugins.py  test_pr_url_extraction.py  test_redaction.py  test_secret.py
tests/cassettes/test_codex_task/: test_fetch_task_html_records_example.yaml
