[project]
name = "f2clipboard"
version = "0.1.0"
description = "Utility for copying selected files to clipboard"
authors = [
    {name = "futuroptimist"}
]
requires-python = ">=3.8"
dependencies = [
    "clipboard"
]

[project.scripts]
f2clipboard = "f2clipboard:main"

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
