[project]
name = "f2clipboard"
version = "0.1.0"
description = "Utility for copying selected files to clipboard"
authors = [
    {name = "futuroptimist"}
]
requires-python = ">=3.8"
dependencies = [
    "clipboard",
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
f2clipboard = "f2clipboard.cli:main"

[tool.pytest.ini_options]
addopts = "-q"

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
