[project]
name = "f2clipboard"
version = "0.1.0"
description = "Utility for copying selected files to clipboard"
authors = [
    {name = "futuroptimist"}
]
requires-python = ">=3.8"
dependencies = [
    "clipboard",
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx",
    "playwright",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-recording",
    "ruff",
    "flake8",
    "black",
    "isort",
    "pyyaml",
]

[project.scripts]
f2clipboard = "f2clipboard.cli:main"

[project.entry-points."f2clipboard.plugins"]
jira = "f2clipboard.plugins.jira:register"

[tool.pytest.ini_options]
addopts = "-q"
markers = [
    "vcr: mark tests that use pytest-recording",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
